@@ -24,9 +24,9 @@ class BTreePrinter {
         List<Node> newNodes = new ArrayList<Node>();
         for (Node node : nodes) {
             if (node != null) {
-                if (new Character(node.getLetter()).equals(' ')) {
+                if (Character.valueOf(node.getLetter()).equals(' ')) {
                     System.out.print(":)");
-                } else if (new Character(node.getLetter()).equals('\r')) {
+                } else if (Character.valueOf(node.getLetter()).equals('\r')) {
                     System.out.print("cr");
                 } else {
                     System.out.print(node.getLetter());
@@ -44,21 +44,21 @@ class BTreePrinter {
         System.out.println("");
 
         for (int i = 1; i <= endgeLines; i++) {
-            for (int j = 0; j < nodes.size(); j++) {
+            for (Node node : nodes) {
                 BTreePrinter.printWhitespaces(firstSpaces - i);
-                if (nodes.get(j) == null) {
+                if (node == null) {
                     BTreePrinter.printWhitespaces(endgeLines + endgeLines + i + 1);
                     continue;
                 }
 
-                if (nodes.get(j).left != null)
+                if (node.left != null)
                     System.out.print("/");
                 else
                     BTreePrinter.printWhitespaces(1);
 
                 BTreePrinter.printWhitespaces(i + i - 1);
 
-                if (nodes.get(j).right != null)
+                if (node.right != null)
                     System.out.print("\\");
                 else
                     BTreePrinter.printWhitespaces(1);
